# OpenHarness

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
docs/: CNAME  api-reference.html  conformance.html  index.html  matrix.html  openharness.mapi.md  portal.html  profiles.html  samples.html
docs/adapters/: anthropic-agent.html  claude-code.html  deepagent.html  goose.html  letta.html
examples/agent-cases/: sales-call-prep-agent-design.md  travel-research-agent.md
examples/daily-affirmation/package/: AGENTS.md
examples/meeting-summarizer/package/: AGENTS.md
examples/multi-adapter-demo/: README.md  pyproject.toml
examples/multi-adapter-demo/.venv-py312/: pyvenv.cfg
examples/multi-adapter-demo/src/demo/: __init__.py  adapters.py  main.py
examples/recipe-finder/package/: AGENTS.md
examples/sales-call-prep/: grainger_sales_briefing.md
examples/sales-call-prep/case/: README.md
examples/sales-call-prep/package/: AGENTS.md
examples/travel-research/design/: README.md
scripts/: import_agent.py  package_agent.py
skills/: package-agent.skill
spec/: AGENT_CASE.md  AGENT_DESIGN_PROMPT.md  CAPABILITY_MANIFEST.md  HARNESS_SUPPORT_MATRIX.md  OPEN_HARNESS_API.md  UNIVERSAL_HARNESS_API.md  openharness.mapi.md
tests/conformance/: CONFORMANCE_TESTS.md  RESULTS.md  __init__.py  conftest.py  test_agents.py  test_execution.py  test_files.py  test_hooks.py  test_mcp.py  test_memory.py  test_planning.py  test_sessions.py  test_skills.py  test_streaming.py  test_subagents.py  test_tool_events.py  test_tools.py
(+52 files in other folders)
